# flappy

./: .gitignore  copygamelibs.py  meson.build
include/: bird.hpp  entity.hpp  flappy.hpp  rect.hpp  sprite.hpp  transform.hpp
src/: flappy.cpp  main.cpp  sprite.cpp
